Name:            heap
Version:         0.1
License:         BSD3
Author:          Stephan Friedrichs (stephan[dot]friedrichs[at]tu-bs[dot]de)
Stability:       beta
Synopsis:        Heaps in Haskell
Description:     A flexible Haskell heap implementation
Build-Depends:   base
Exposed-Modules: Data.Heap
ghc-options:     -O

