
Name:                heap
Version:             1.0.0
Stability:           beta

Category:            Data Structures
Synopsis:            Heaps in Haskell
Description:         A flexible Haskell heap implementation

License:             BSD3
License-File:        LICENSE
Copyright:           (c) 2008-2009, Stephan Friedrichs

Author:              Stephan Friedrichs
Maintainer:          Stephan Friedrichs (deduktionstheorem at web dot de)

Build-Type:          Simple
Cabal-Version:       >= 1.2
Extra-Source-Files:  Test.lhs, Test/Heap.hs
Tested-With:         GHC

Library
  Build-Depends:     base, binary >= 0.5
  Exposed-Modules:   Data.Heap
  GHC-Options:       -Wall -fwarn-tabs -Werror
  Extensions:        CPP, EmptyDataDecls, DeriveDataTypeable, FlexibleInstances, MultiParamTypeClasses, ScopedTypeVariables

