
Name:                heap
Version:             1.0.0
Stability:           beta

Category:            Data Structures
Synopsis:            Heaps in Haskell
Description:         A flexible Haskell heap implementation

License:             BSD3
License-File:        LICENSE
Copyright:           (c) 2008-2009, Stephan Friedrichs

Author:              Stephan Friedrichs
Maintainer:          Stephan Friedrichs (deduktionstheorem at web dot de)

Build-Type:          Simple
Cabal-Version:       >= 1.2
Extra-Source-Files:
    Test.lhs
  , Test/Heap.hs
  , Test/Heap/Common.hs
  , Test/Heap/Internal.hs
  , Test/Heap/Item.hs
Tested-With:         GHC

Library
  Build-Depends:
      base
    , binary >= 0.5 && < 1
  Exposed-Modules:
      Data.Heap
  Other-Modules:
      Data.Heap.Internal
    , Data.Heap.Item
  GHC-Options:       -Wall -fwarn-tabs
  Extensions:
      DeriveDataTypeable
    , EmptyDataDecls
    , FlexibleContexts
    , FlexibleInstances
    , GeneralizedNewtypeDeriving
    , MultiParamTypeClasses
    , ScopedTypeVariables
    , TypeFamilies

